--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src=" Photo.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="Photo.jpg">
             <h1>AATHISHKUMAR M</h1>
             <p>B.SC COMPUTER SCIENCE</p>
         </div>
